# reviewbot

./: .env.example  .gitignore  .mise.toml  CLAUDE.md  README.md  pyproject.toml
.cctmp/docs/: aws-bedrock-agentcore-runtime-research.md  github-app-research.md  large-pr-diff-handling-strategies.md
.github/actions/setup-python-uv/: action.yml
.github/workflows/: ci.yml
app/: __init__.py  agentcore.py  main.py
app/agent/: __init__.py  prompts.py  reviewer.py
app/models/: __init__.py  comment.py  config.py  file_diff.py  pull_request.py  rule.py  session.py
app/rules/: __init__.py  loader.py
app/tools/: __init__.py  comments.py  diff.py  github.py
app/utils/: __init__.py  config_loader.py  logging.py  retry.py
app/webhook/: __init__.py  handler.py  validators.py
docs/: deployment.md
specs/001-ai-code-review-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ai-code-review-agent/contracts/: agent-tools.yaml  webhook-api.yaml
tests/: __init__.py  conftest.py
tests/contract/: __init__.py  test_webhook_contract.py
tests/fixtures/: __init__.py  diffs.py  webhook_payloads.py
tests/integration/: __init__.py  test_webhook_flow.py
tests/unit/: __init__.py  test_agent.py  test_agentcore.py  test_config.py  test_diff.py  test_edge_cases.py  test_github_tools.py  test_logging.py  test_models.py  test_retry.py  test_rules.py  test_webhook.py
